# VisualTrueType

./: .gitignore  CXXFLAGS  NOTICE.txt  README.md  pypi.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: msbuild.yml  py_ext_main.yml
doc/: Extending Typeman Talk.docx  ReadMe.doc  Res hints implementation guide.docx  VTT Control Program.docx
doc/Extending_Typeman_Talk/: Extending_Typeman_Talk.md
doc/Res_Hints_Implementation_Guide/: ResHints_Implementation_Guide.md
doc/VTT Language Reference/: doc-print.css  doc.css  vttlang.html  vttlang.md
doc/VTT_Control_Program/: VTTControlProgram.md
doc/help/: README.md  vtt.chm  vtt.chw  vtt.hhc  vtt.hhp
doc/help/css/: styles.css
doc/help/html/: 01-01-IntroVTT.htm  01-02-Tool4Users.htm  01-03-OtherResources.htm  02-01-SettingPrefs.htm  02-02-01-PreparingFont.htm  02-02-OpenCloseFont.htm  02-03-SetDevResolution.htm  02-04-CompilingResults.htm  02-05-Printing.htm  02-06-GASP.htm  02-07-MemoryReqts.htm  02-08-Saving.htm  02-09-Prep4Ship.htm  03-00-MainWindow.htm  03-01-Toolbar.htm  03-02-MovingAround.htm  03-02-Resizing.htm  03-04-ChgPointSize.htm  03-05-DiffGlyph.htm  03-06-Measuring.htm  03-07-00-OtherWindows.htm  03-07-01-GlyphWindow.htm  03-07-02-SnapShotWindow.htm  04-01-00-HintingBasics.htm  04-01-01-00-HintingOverview.htm  04-01-01-01-HintingWkflow.htm  04-01-01-02-HintingStrategies.htm  04-01-01-03-VisualHinting.htm  04-01-02-00-UsingCVT.htm  04-01-02-01-ReadingCVT.htm  04-01-02-02-SettingInitialCVT.htm  04-01-02-03-HintingWithCVTVals.htm  04-01-02-04-ChangingChrGrp.htm  04-01-03-00-RefiningGlyphOutline.htm  04-01-03-01-OnOffCurvePts.htm  04-01-03-02-NumberingCPts.htm  04-01-03-03-EditingMetrics.htm  04-01-04-00-RoundingCPts.htm  04-01-04-01-SixMethods.htm  04-01-04-02-Ex1-Rounding.htm  (+52 more)
doc/help/images/: ToolbarButtons.psd
src/: .clang-format  Area.cpp  Area.h  CvtManager.cpp  CvtManager.h  File.cpp  File.h  FixedMath.h  GUIDecorations.h  List.cpp  List.h  Makefile  MathUtils.cpp  MathUtils.h  Memory.cpp  Memory.h  Platform.cpp  Platform.h  TMTParser.cpp  TMTParser.h  TTAssembler.cpp  TTAssembler.h  TTEngine.cpp  TTEngine.h  TTFont.cpp  TTFont.h  TTGenerator.cpp  TTGenerator.h  TextBuffer.cpp  TextBuffer.h  Variation.cpp  Variation.h  VariationInstance.cpp  VariationInstance.h  VariationModels.cpp  VariationModels.h  application.cpp  application.h  getopt.h  guidecorations.h  (+11 more)
templates/: chargrp.txt  cvttmpl.txt  fpgmtmpl.txt  preptmpl.txt
tests/: test_vttcompile.py
vttcompile/: CMakeLists.txt  vttcompile.sln  vttcompile.vcxproj  vttcompile.vcxproj.filters
vttcompile/vttcompile.xcodeproj/: project.pbxproj
vttcompile/vttcompile.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
vttcompile/vttcompile.xcodeproj/project.xcworkspace/xcuserdata/georg.xcuserdatad/: UserInterfaceState.xcuserstate
vttcompile/vttcompile.xcodeproj/xcuserdata/georg.xcuserdatad/xcschemes/: xcschememanagement.plist
vttcompilepy/: __init__.py  __main__.py  _version.py  cvttcompilepy.pxd  quit_to_glyphs.py  vttcompilepy.pyx
