[build-system]
requires = [
    "setuptools",
    "wheel",
    "cython",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = ["*-manylinux_i686", "pp*"]

test-requires = ["pytest", "fonttools"]
test-command = "pytest {project}/tests"

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]
